--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                     <div class="row g-3">
                         <div class="col-6 text-end">
                             <img class="img-fluid bg-white p-3 w-100 mb-3" src="img/h1.png" alt="">
-                            <img class="img-fluid bg-white p-3 w-50" src="img/hero-3.jpg" alt="">
+                            <img class="img-fluid bg-white p-3 w-50" src="img/favorites/quavah_21-watermarked.png" alt="">
                         </div>
                         <div class="col-6">
-                            <img class="img-fluid bg-white p-3 w-50 mb-3" src="img/hero-4.jpg" alt="">
-                            <img class="img-fluid bg-white p-3 w-100" src="img/hero-2.jpg" alt="">
+                            <img class="img-fluid bg-white p-3 w-50 mb-3" src="img/favorites/quavah_88-watermarked.png" alt="">
+                            <img class="img-fluid bg-white p-3 w-100" src="img/favorites/quavah_98-watermarked.png" alt="">
                         </div>
                     </div>
                 </div>
