--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="d-flex align-items-center pt-4 animated slideInDown">
                         <a href="" class="btn btn-primary py-3 px-4 me-5">Explore More</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
-                            data-src=" https://youtube.com/live/ecQ8aq41nEY" data-bs-target="#videoModal">
+                            data-src="  https://youtube.com/live/ecQ8aq41nEY" data-bs-target="#videoModal">
                             <span></span>
                         </button>
                         <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
@@ -138,10 +138,10 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="row g-3 img-twice position-relative h-100">
                         <div class="col-6">
-                            <img class="img-fluid bg-light p-3" src="img/about-1.jpg" alt="">
+                            <img class="img-fluid bg-light p-3" src="img/favorites/quavah_77-watermarked.png" alt="">
                         </div>
                         <div class="col-6 align-self-end">
-                            <img class="img-fluid bg-light p-3" src="img/about-2.jpg" alt="">
+                            <img class="img-fluid bg-light p-3" src="img/favorites/quavah_75-watermarked.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="text-primary text-uppercase mb-2">Why Join Us!</p>
-                <h1 class="display-6 mb-5">The Leading Photo Studio In The Country</h1>
+                <h1 class="display-6 mb-5">Join the community of Believers</h1>
             </div>
             <div class="row g-3">
                 <div class="col-lg-4 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -263,118 +263,27 @@
 
 
     <!-- Project Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="text-primary text-uppercase mb-2">Our Works</p>
-                <h1 class="display-6 mb-0">Discover Our Unique And Creative Photoshoot</h1>
-            </div>
-            <div class="row g-3">
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="row g-3">
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-5.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-5.jpg" data-lightbox="project">
-                                    Memory
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-1.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-1.jpg" data-lightbox="project">
-                                    Wedding
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="row g-3">
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-2.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-2.jpg" data-lightbox="project">
-                                    Portrait
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-6.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-6.jpg" data-lightbox="project">
-                                    Travel
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="row g-3">
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-7.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-7.jpg" data-lightbox="project">
-                                    Wedding
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-3.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-3.jpg" data-lightbox="project">    
-                                    Memory
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="row g-3">
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-4.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-4.jpg" data-lightbox="project">
-                                    Fashion
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="project-item">
-                                <img class="img-fluid" src="img/project-8.jpg" alt="">
-                                <a class="project-title h5 mb-0" href="img/project-8.jpg" data-lightbox="project">
-                                    Portrait
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Project End -->
-
+    
 
     <!-- Team Start -->
     <div class="container-xxl px-0 py-5">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            <p class="text-primary text-uppercase mb-2">Our Team</p>
-            <h1 class="display-6 mb-0">Creative Photograher And Videographer</h1>
+            <p class="text-primary text-uppercase mb-2">Our Partners</p>
+            <h1 class="display-6 mb-0">Meet Our Partners</h1>
         </div>
         <div class="row g-0">
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                 <div class="row g-0 flex-sm-row">
                     <div class="col-sm-6">
                         <div class="team-img position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/" alt="">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="h-100 p-5 d-flex flex-column justify-content-between">
                             <div class="mb-3">
-                                <h4>Lucifer Jhones</h4>
-                                <span>Photographer</span>
+                                <h4></h4>
+                                <span>Partner Media</span>
                             </div>
                             <p>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo</p>
                             <div class="d-flex">
