--- a/index.html
+++ b/index.html
@@ -200,59 +200,59 @@
     <div class="container-xxl bg-light py-5 my-5">
         <div class="container py-5">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="text-primary text-uppercase mb-2">Our Services</p>
-                <h1 class="display-6 mb-4">We Provide Best Professional Services</h1>
+                <p class="text-primary text-uppercase mb-2">Our Programs</p>
+                <h1 class="display-6 mb-4"></h1>
             </div>
             <div class="row g-3">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex flex-column bg-white p-3 pb-0">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
+                            <img class="img-fluid" src="img/favorites/quavah_21-watermarked.png" alt="">
                             <div class="service-overlay">
                                 <a class="btn btn-lg-square btn-outline-light rounded-circle" href=""><i class="fa fa-link text-primary"></i></a>
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h4>Weddings</h4>
+                            <h4>Forge</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex flex-column bg-white p-3 pb-0">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid" src="img/favorites/quavah_3-watermarked.png" alt="">
                             <div class="service-overlay">
                                 <a class="btn btn-lg-square btn-outline-light rounded-circle" href=""><i class="fa fa-link text-primary"></i></a>
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h4>Portraits</h4>
+                            <h4>Talk it out</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item d-flex flex-column bg-white p-3 pb-0">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid" src="img/favorites/quavah_41-watermarked.png" alt="">
                             <div class="service-overlay">
                                 <a class="btn btn-lg-square btn-outline-light rounded-circle" href=""><i class="fa fa-link text-primary"></i></a>
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h4>Fashion</h4>
+                            <h4></h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item d-flex flex-column bg-white p-3 pb-0">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid" src="img/favorites/quavah_75-watermarked.png" alt="">
                             <div class="service-overlay">
                                 <a class="btn btn-lg-square btn-outline-light rounded-circle" href=""><i class="fa fa-link text-primary"></i></a>
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h4>Editorial</h4>
+                            <h4></h4>
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                 <div class="row g-0 flex-sm-row-reverse">
                     <div class="col-sm-6">
                         <div class="team-img position-relative">
-                            <img class="img-fluid" src="img/team-4.jpg" alt="">
+                            <img class="img-fluid" src="img/" alt="">
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -381,9 +381,9 @@
                     <h1 class="display-5 text-primary">The Birthing Place</h1>
                 </a>
                 <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+                <p><i class="fa fa-map-marker-alt me-2"></i></p>
+                <p><i class="fa fa-phone-alt me-2"></i></p>
+                <p><i class="fa fa-envelope me-2"></i></p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
